tests/NormalTests/paczka1/fuzzy1/52717968.err
Error in line 12: t1Ibxk S696 90,9
Error in line 15: t1Ibxk A659 12,3
Error in line 10: RyhUKBR A923 0,0
Error in line 20: t1Ibxk A923 56,8
Error in line 16: XV4gaAGh A659 12,7
Error in line 23: t1Ibxk S696 14,9
Error in line 30: RyhUKBR S7 17,0
Error in line 32: gReROnOP8oN S696 34,3
